--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.org.person</groupId>
+	<groupId>com.org</groupId>
 	<artifactId>project</artifactId>
 	<packaging>pom</packaging>
 	<version>0.0.1-SNAPSHOT</version>
@@ -24,17 +24,17 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>com.org.person</groupId>
+				<groupId>com.org</groupId>
 				<artifactId>person</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.org.person</groupId>
+				<groupId>com.org</groupId>
 				<artifactId>persist</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.org.person</groupId>
+				<groupId>com.org</groupId>
 				<artifactId>service</artifactId>
 				<version>${project.version}</version>
 			</dependency>
