--- a/service/pom.xml
+++ b/service/pom.xml
@@ -7,7 +7,7 @@
 
 
 	<parent>
-		<groupId>com.org.person</groupId>
+		<groupId>com.org</groupId>
 		<artifactId>project</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
@@ -22,7 +22,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.org.person</groupId>
+			<groupId>com.org</groupId>
 			<artifactId>persist</artifactId>
 		</dependency>
 
