--- a/service/pom.xml
+++ b/service/pom.xml
@@ -8,7 +8,7 @@
 
 	<parent>
 		<groupId>com.org</groupId>
-		<artifactId>project</artifactId>
+		<artifactId>RestSpringExample</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
