--- a/service/pom.xml
+++ b/service/pom.xml
@@ -1,10 +1,11 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>service</artifactId>
 	<packaging>jar</packaging>
-	<name>person Maven Webapp</name>
-
+	<name>service module</name>
 
 	<parent>
 		<groupId>com.org</groupId>
@@ -13,11 +14,6 @@
 	</parent>
 
 	<properties>
-		<spring.version>4.2.0.RELEASE</spring.version>
-		<jackson.version>2.5.3</jackson.version>
-		<logback-classic.version>1.1.7</logback-classic.version>
-		<java.version>1.8</java.version>
-		<junit.version>4.12</junit.version>
 	</properties>
 
 	<dependencies>
@@ -32,8 +28,11 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- Bean Validation Dependencies -->
+
 
 		<!-- Spring Dependencies -->
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
@@ -46,11 +45,13 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-tx</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 
 		<!-- log -->
 		<dependency>
@@ -72,7 +73,6 @@
 				</configuration>
 			</plugin>
 		</plugins>
-		
 		<finalName>${project.artifactId}</finalName>
 	</build>
 </project>
