--- a/persist/pom.xml
+++ b/persist/pom.xml
@@ -1,9 +1,11 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>persist</artifactId>
 	<packaging>jar</packaging>
-	<name>person Maven Webapp</name>
+	<name>persist module</name>
 
 	<parent>
 		<groupId>com.org</groupId>
@@ -12,11 +14,6 @@
 	</parent>
 
 	<properties>
-		<spring.version>4.2.0.RELEASE</spring.version>
-		<jackson.version>2.5.3</jackson.version>
-		<logback-classic.version>1.1.7</logback-classic.version>
-		<java.version>1.8</java.version>
-		<junit.version>4.12</junit.version>
 	</properties>
 
 	<dependencies>
@@ -32,13 +29,14 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
 		<!-- Bean Validation Dependencies -->
+
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
 			<scope>compile</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
@@ -52,6 +50,7 @@
 		</dependency>
 
 		<!-- JPA Persistence Dependencies -->
+
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
@@ -79,8 +78,8 @@
 			<artifactId>hibernate-jpa-2.0-api</artifactId>
 			<scope>compile</scope>
 		</dependency>
-		
 		<!-- Spring Dependencies -->
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
@@ -93,6 +92,7 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-tx</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
@@ -106,6 +106,7 @@
 		</dependency>
 
 		<!-- DB Dependencies -->
+
 		<dependency>
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
