--- a/person/pom.xml
+++ b/person/pom.xml
@@ -1,9 +1,11 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>person</artifactId>
 	<packaging>war</packaging>
-	<name>person Maven Webapp</name>
+	<name>person module Webapp</name>
 
 	<parent>
 		<groupId>com.org</groupId>
@@ -12,11 +14,7 @@
 	</parent>
 
 	<properties>
-		<spring.version>4.2.0.RELEASE</spring.version>
 		<jackson.version>2.5.3</jackson.version>
-		<logback-classic.version>1.1.7</logback-classic.version>
-		<java.version>1.8</java.version>
-		<junit.version>4.12</junit.version>
 	</properties>
 
 	<dependencies>
@@ -58,6 +56,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
 		</dependency>
 
 		<!-- log -->
