--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
@@ -5,17 +7,16 @@
 	<artifactId>RestSpringExample</artifactId>
 	<packaging>pom</packaging>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>person Maven Webapp</name>
+	<name>pom project</name>
 
 	<modules>
-		<module>person</module>
 		<module>persist</module>
+		<module>person</module>
 		<module>service</module>
 	</modules>
 
 	<properties>
 		<spring.version>4.2.0.RELEASE</spring.version>
-		<jackson.version>2.5.3</jackson.version>
 		<logback-classic.version>1.1.7</logback-classic.version>
 		<java.version>1.8</java.version>
 		<junit.version>4.12</junit.version>
@@ -87,7 +88,6 @@
 				<artifactId>hsqldb</artifactId>
 				<version>1.8.0.10</version>
 			</dependency>
-			
 			<!-- mysql -->
 			<dependency>
 				<groupId>mysql</groupId>
@@ -101,8 +101,8 @@
 				<version>1.0.0.Final</version>
 				<scope>compile</scope>
 			</dependency>
-			
 			<!-- Spring Dependencies -->
+
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-context</artifactId>
@@ -123,16 +123,12 @@
 				<artifactId>spring-tx</artifactId>
 				<version>${spring.version}</version>
 			</dependency>
+
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-test</artifactId>
 				<version>${spring.version}</version>
 				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>com.fasterxml.jackson.core</groupId>
-				<artifactId>jackson-databind</artifactId>
-				<version>${jackson.version}</version>
 			</dependency>
 
 			<!-- log -->
@@ -143,6 +139,7 @@
 			</dependency>
 
 			<!-- DB Dependencies -->
+
 			<dependency>
 				<groupId>commons-dbcp</groupId>
 				<artifactId>commons-dbcp</artifactId>
