--- a/persist/pom.xml
+++ b/persist/pom.xml
@@ -30,27 +30,6 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- Bean Validation Dependencies -->
-
-		<dependency>
-			<groupId>javax.validation</groupId>
-			<artifactId>validation-api</artifactId>
-			<version>1.0.0.GA</version>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-validator</artifactId>
-			<version>4.0.0.GA</version>
-			<scope>compile</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>org.slf4j</groupId>
-					<artifactId>slf4j-api</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-
-			<!-- Bean Validation Dependencies -->
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
@@ -86,7 +65,7 @@
 		<dependency>
 			<groupId>hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
-			<version>1.8.0.10</version>
+			<scope>test</scope>
 		</dependency>
 
 		<!-- mysql -->
@@ -101,7 +80,7 @@
 			<version>1.0.0.Final</version>
 			<scope>compile</scope>
 		</dependency>
-		
+
 		<!-- Spring Dependencies -->
 		<dependency>
 			<groupId>org.springframework</groupId>
