--- a/person/pom.xml
+++ b/person/pom.xml
@@ -59,6 +59,12 @@
 			<version>${jackson.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<scope>test</scope>
+		</dependency>
+		
 		<!-- log -->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
