--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<logback-classic.version>1.1.7</logback-classic.version>
 		<java.version>1.8</java.version>
 		<junit.version>4.12</junit.version>
+		<hsqldb.version>1.8.0.10</hsqldb.version>
 	</properties>
 
 	<dependencyManagement>
@@ -40,6 +41,14 @@
 				<version>${project.version}</version>
 			</dependency>
 
+			<!-- hsqldb -->
+			<dependency>
+				<groupId>hsqldb</groupId>
+				<artifactId>hsqldb</artifactId>
+				<version>${hsqldb.version}</version>
+				<scope>test</scope>
+			</dependency>
+
 			<!-- Test Dependencies -->
 			<dependency>
 				<groupId>junit</groupId>
@@ -48,7 +57,7 @@
 				<scope>test</scope>
 			</dependency>
 
-			
+
 			<!-- Spring Dependencies -->
 			<dependency>
 				<groupId>org.springframework</groupId>
